Fix spinner overflow

--- a/src/client/App.css
+++ b/src/client/App.css
@@ -3,6 +3,7 @@
   margin: 0 auto;
   padding: 2em;
   text-align: center;
+  overflow: hidden;
 }
 
 .logo {
